2015-11-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add find_maxerrs() to the Python interface, for use in error regularisation.

	* Use the param file name as a regex.

	* Use __slots__ in the internal histogram and bin types, for better memory efficiency.

	* Fix (re-fix?) use of inappropriate indices in calculation of mean and median MC uncertainties.

	* More proactive data object deletion after conversion to YODA data format.

2015-11-22  Andy Buckley  <andy.buckley@cern.ch>

	* Version 2.1.0 (significant version change due to scaling, all-orders, and ROOT support)

2015-11-18  Andy Buckley  <andy.buckley@cern.ch>

	* dataio.py: Add ROOT file reading ability.

	* Change rescaling I/O behaviour a bit, moving some hacked
	Python-only Ipol string constructors into explicit API improvements, and
	only activating rescaling if DoParamScaling is set true.

2015-11-16  Andy Buckley  <andy.buckley@cern.ch>

	* Add CPPFLAGS steering in Makefile and API tidying.

2015-11-11  Holger Schulz  <holger.schulz@cern.ch>

	* Add automatic raw param value -> unit range mapping to Ipol.

	* Add any-order long vector calculation.

2015-11-10  Andy Buckley  <andy.buckley@cern.ch>

	* Add prof2-lsipol as a handy way to make a tuning weights file
	and for general convenience.

2015-10-06  Andy Buckley  <andy.buckley@cern.ch>

	* Version 2.0.0

	* Add 'make dist' target to Makefile, and tweak/reduce Cython necessity

	* Allow calls to IpolBin and IpolHisto methods with params passed
	as unpacked *args as well as a packed iterable.

	* Add possibility to pass params as an dict-like as well as a list
	or tuple of floats -- note that the dict-like must return
	*ordered* values consistent with the Ipol training. Also ensure
	the float type.

	* Add conversion of C++ exceptions to Python exceptions.

	* Add professor2.utils module, providing an opportunistic use of
	OrderedDict for params so the params order required by Ipol is the